--- a/index.html
+++ b/index.html
@@ -39,8 +39,91 @@
             <a href="#"><i class="bx bxl-twitter"></i></a>
             <a href="#"><i class="bx bxl-linkedin"></i></a>
         </div>
+
+        <div class="home-imgHover"></div>
+    </section>
+
+    <!-- about section -->
+    <section class="about" id="about">
+        <h2 class="heading">About <span>Us</span></h2>
+
+        <div class="about-img">
+            <img src="imgs/About Logo.jpg">
+            <span class="circle-spin"></span>
+        </div>
+
+        <div class="about-content">
+            <h3>Forum</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae maiores totam voluptatem vel ipsam possimus dolor dignissimos! Nesciunt, dolore laboriosam at, autem possimus sed sint, quidem ipsa expedita commodi atque.</p>
+            <div class="btn-box btns">
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
     </section>
     
+    <!-- education section -->
+
+    <section class="education" id="education">
+        <h2 class="heading">My <span>Journey</span></h2>
+
+        <div class="education-row">
+            <div class="education-column">
+                <h3 class="title">Education</h3>
+
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calender"></i>2017-2018</div>
+                            <h3>Master Degree - University</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione laboriosam debitis pariatur voluptatum.</p>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calender"></i>2017-2018</div>
+                            <h3>Master Degree - University</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione laboriosam debitis pariatur voluptatum.</p>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calender"></i>2017-2018</div>
+                            <h3>Master Degree - University</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione laboriosam debitis pariatur voluptatum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="education-column">
+                <h3 class="title">Experience</h3>
+
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calender"></i>2017-2018</div>
+                            <h3>Master Degree - University</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione laboriosam debitis pariatur voluptatum.</p>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calender"></i>2017-2018</div>
+                            <h3>Master Degree - University</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione laboriosam debitis pariatur voluptatum.</p>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calender"></i>2017-2018</div>
+                            <h3>Master Degree - University</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ratione laboriosam debitis pariatur voluptatum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
